--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
             </nav>
         </header>
 
-        <section class="main">
+        <section class="container">
+            <section class="main">
             
             <div>
                 <h1>Crea, distruggi, ripeti.</h1>
@@ -56,7 +57,9 @@
 
             </div>
 
-            <img src="img/img1.png" alt="">
+            <div class="image">
+                <img src="img/img1.png" alt="">
+            </div>
 
         </section>
 
